--- a/resource-definitions/template-driver/annotations/annotations.yaml
+++ b/resource-definitions/template-driver/annotations/annotations.yaml
@@ -17,7 +17,7 @@ entity:
             {{- $port := values .resource.spec.service.ports | first }}
             - op: add
               path: /spec/service/annotations/cloud.google.com~1neg
-              value: '{"ingress":true,"exposed_ports":{ {{- $port.container_port | quote -}} :{}}}'
+              value: '{"ingress":true,"exposed_ports":{ {{- $port.service_port | quote -}} :{}}}'
             {{- end}}
   criteria:
     - {}
