--- a/.github/workflows/scheduled-generated.yml
+++ b/.github/workflows/scheduled-generated.yml
@@ -8,6 +8,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
+      - uses: hashicorp/setup-terraform@v3
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
