Added hint to use HTTPS GitHub URL for PAT

--- a/resource-definitions/k8s-cluster-git/runtime/github-for-gitops.yaml
+++ b/resource-definitions/k8s-cluster-git/runtime/github-for-gitops.yaml
@@ -10,6 +10,8 @@ entity:
     values:
       # Git repository for pushing manifests
       url: git@github.com:example-org/gitops-repo.git
+      # When using a GitHub personal access token, use the HTTPS URL:
+      # url: https://github.com/example-org/gitops-repo.git
       # Branch in the git repository, optional. If not specified, the default branch is used.
       branch: development
       # Path in the git repository, optional. If not specified, the root is used.
