fix(docs-447): clarify the use of shared app values from Score workloads

--- a/score/environment-variables/humanitec.score.yaml
+++ b/score/environment-variables/humanitec.score.yaml
@@ -3,6 +3,8 @@ apiVersion: humanitec.org/v1b1
 spec:
   containers:
     demo:
-      env:
+      variables:
       - name: "SOME"
         value: "VARIABLE"
+      - name: "SHARED_VALUE"
+        value": "$${values.SOMETHING}"
