Added mention of Agent for GitOps runtime access

--- a/resource-definitions/k8s-cluster-git/runtime/gke-temporary-credentials-runtime.yaml
+++ b/resource-definitions/k8s-cluster-git/runtime/gke-temporary-credentials-runtime.yaml
@@ -16,5 +16,10 @@ entity:
       name: demo-123
       zone: europe-west2-a
       project_id: my-gcp-project
+    secrets:
+      # Optional: set this property to use the Humanitec Agent for accessing runtime information
+      # if the target cluster is private. This requires the Agent to be configured
+      # for the cluster and the proper Agent Resource Definition to be matched.
+      agent_url: "${resources['agent#agent'].outputs.url}"
   criteria:
   - res_id: k8s-cluster-runtime
