fix(docs-447): clarify the use of shared app values from Score workloads (#98)
Co-authored-by: Tobias Babin <tobias.babin@humanitec.com>
Co-authored-by: Tobias Babin <140624220+TobiasBabin@users.noreply.github.com>

--- a/score/environment-variables/humanitec.score.yaml
+++ b/score/environment-variables/humanitec.score.yaml
@@ -3,6 +3,6 @@ apiVersion: humanitec.org/v1b1
 spec:
   containers:
     demo:
-      env:
-      - name: "SOME"
-        value: "VARIABLE"
+      variables:
+        SOME: VARIABLE
+        SHARED_VALUE: $${values.SOMETHING}
