fix bizare volume examples

--- a/score/volumes/score.yaml
+++ b/score/volumes/score.yaml
@@ -5,17 +5,11 @@ metadata:
 containers:
   demo:
     image: registry/my-image:1.0.0
-    # Volume mount declaration referencing the volume from the Score extension.
     volumes:
-      - source: "volumes.example-1"
-        target: /mnt/example-1
-        path: "" # Shown for illustration purposes. Must be a relative path.
+      - source: ${resources.my-volume}
+        target: /mnt/my-volume
         readOnly: true
-      - source: "volumes.example-2"
-        target: /mnt/example-2
-        path: "" # Shown for illustration purposes. Must be a relative path.
-        readOnly: true
-      - source: "volumes.example-3"
-        target: /mnt/example-3
-        path: "" # Shown for illustration purposes. Must be a relative path.
-        readOnly: true
+
+resources:
+  my-volume:
+    type: volume
