--- a/resource-definitions/volume-pvc/volumes/score.yaml
+++ b/resource-definitions/volume-pvc/volumes/score.yaml
@@ -7,6 +7,21 @@ containers:
     volumes:
     - source: ${resources.my-pvc}
       target: /target/dir
+    - source: ${resources.my-ephemeral-volume}
+      target: /tmp/dir
+    - source: ${resources.my-ebs}
+      target: /ebs-target/dir
+    - source: ${resources.my-efs}
+      target: /efs-target/dir
 resources:
   my-pvc:
     type: volume
+  my-ephemeral-volume:
+    type: volume
+    class: ephemeral
+  my-ebs:
+    type: volume
+    class: ebs
+  my-efs:
+    type: volume
+    class: efs
