--- a/resource-definitions/template-driver/horizontalpodautoscaler/hpa.yaml
+++ b/resource-definitions/template-driver/horizontalpodautoscaler/hpa.yaml
@@ -1,10 +1,10 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: hpa-template
+  id: hpa
 entity:
   driver_type: humanitec/template
-  name: hpa-template
+  name: hpa
   type: horizontal-pod-autoscaler
   driver_inputs:
     values:
