--- a/score/probes/humanitec.score.http.yaml
+++ b/score/probes/humanitec.score.http.yaml
@@ -4,34 +4,23 @@ spec:
   containers: 
     demo:
       liveness_probe:
-        type: command
-        command:
-          - "bash"
-          - "-c"
-          - "/app/is_alive.sh"
         failureThreshold: 5
         initialDelaySeconds: 30
         periodSeconds: 30
         successThreshold: 1
         timeoutSeconds: 5
       readiness_probe:
-        type: command
-        command:
-          - "bash"
-          - "-c"
-          - "/app/is_ready.sh"
         failureThreshold: 5
         initialDelaySeconds: 30
         periodSeconds: 30
         successThreshold: 1
         timeoutSeconds: 300
       startup_probe:
-        type: command
-        command:
-          - "bash"
-          - "-c"
-          - "/app/is_started.sh"
+        type: "http"
+        path: /healthcheck
+        port: 8000
         failureThreshold: 200
         periodSeconds: 10
         successThreshold: 1
         timeoutSeconds: 1
+        
