Fix ksa example

--- a/resource-definitions/template-driver/serviceaccount/serviceaccount-k8ssa-def.yaml
+++ b/resource-definitions/template-driver/serviceaccount/serviceaccount-k8ssa-def.yaml
@@ -11,9 +11,8 @@ entity:
     values:
       res_id: ${context.res.id}
       templates:
-        # Name the ServiceAccount after the Resource
         init: |
-          name: {{ index (splitList "." "${context.res.id}") 1 }}
+          name: {{ index ( .driver.values.res_id | splitList "." ) 1 }}
         outputs: |
           name: {{ .init.name }}
         manifests: |
