--- a/resource-definitions/template-driver/horizontal-pod-autoscaler/hpa.yaml
+++ b/resource-definitions/template-driver/horizontal-pod-autoscaler/hpa.yaml
@@ -8,13 +8,20 @@ entity:
   type: horizontal-pod-autoscaler
   driver_inputs:
     values:
+      resId: ${context.res.id}
       templates:
         init: |
           {{ $defaultMaxReplicas := 3 }}
           {{ $defaultMinReplicas := 2 }}
           {{ $absoluteMaxReplicas := 10 }}
           {{ $defaultTargetUtilizationPercent := 80 }}
-          workload: {{ index (splitList "." "${context.res.id}") 1 }}
+          
+          workload: {{ if regexMatch "modules\\.[a-z0-9-]+\\.externals" .driver.values.resId }}
+            {{- index (splitList "." .driver.values.resId) 1 | toRawJson }}
+          {{- else }}
+            {{- cat "A horizontal-pod-autoscaler must be added as a private resource dependency. ID:" .driver.values.resId | fail }}
+          {{- end }}
+
           maxReplicas: {{ .resource.maxReplicas | default $defaultMaxReplicas | min $absoluteMaxReplicas }}
           minReplicas: {{ .resource.minReplicas | default $defaultMinReplicas }}
           targetCPUUtilizationPercentage: {{ .resource.targetCPUUtilizationPercentage | default $defaultTargetUtilizationPercent }}
