--- a/resource-definitions/generic-async-driver/job-pod-template-source-files/k8s-cluster-runner-config.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-files/k8s-cluster-runner-config.yaml
@@ -1,3 +1,4 @@
+# This Resource Definition provides configuration values for the Generic Async Driver.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
