--- a/resource-definitions/generic-async-driver/job-pod-template-source-files/s3.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-files/s3.yaml
@@ -1,3 +1,4 @@
+# This Resource Definition specifies an `s3` Resource to be provisioned through inline Terraform code.
 apiVersion: entity.humanitec.io/v1b1
 
 kind: Definition
