--- a/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/s3.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/s3.yaml
@@ -1,3 +1,4 @@
+# This Resource Definition specifies an `s3` Resource to be provisioned through Terraform code read from a private Git repository accessed via an SSH key.
 apiVersion: entity.humanitec.io/v1b1
 
 kind: Definition
