--- a/resource-definitions/generic-async-driver/job-pod-template-source-files/agent-runner.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-files/agent-runner.yaml
@@ -1,6 +1,8 @@
 # This Resource Definition specifies the Humanitec Agent to use for the Runner.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
+metadata:
+  id: agent-runner
 entity:
   driver_type: humanitec/agent
   name: agent-runner
