--- a/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/agent-runner.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/agent-runner.yaml
@@ -1,5 +1,7 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
+metadata:
+  id: agent-runner
 entity:
   driver_type: humanitec/agent
   name: agent-runner
