--- a/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/agent-runner.yaml
+++ b/resource-definitions/generic-async-driver/job-pod-template-source-private-repo/agent-runner.yaml
@@ -1,3 +1,4 @@
+# This Resource Definition specifies the Humanitec Agent to use for the Runner.
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
