Fix filename for inputs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,13 +30,13 @@ jobs:
           resourceDefinitions=$(ls -d resource-definitions/echo-driver/*/*.yaml)
           for resourceDefinition in ${resourceDefinitions}
           do
-            humctl resources test-definition ${resourceDefinition} --generate > $(echo $test |  sed "s,/,-,g")
-            humctl resources test-definition ${resourceDefinition} --inputs $(echo $test |  sed "s,/,-,g")
+            humctl resources test-definition ${resourceDefinition} --generate > $(echo ${resourceDefinition} |  sed "s,/,-,g")
+            humctl resources test-definition ${resourceDefinition} --inputs $(echo ${resourceDefinition} |  sed "s,/,-,g")
           done
           resourceDefinitions=$(ls -d resource-definitions/template-driver/*/*.yaml)
           for resourceDefinition in ${resourceDefinitions}
           do
-            humctl resources test-definition ${resourceDefinition} --generate > $(echo $test |  sed "s,/,-,g")
-            humctl resources test-definition ${resourceDefinition} --inputs $(echo $test |  sed "s,/,-,g")
+            humctl resources test-definition ${resourceDefinition} --generate > $(echo ${resourceDefinition} |  sed "s,/,-,g")
+            humctl resources test-definition ${resourceDefinition} --inputs $(echo ${resourceDefinition} |  sed "s,/,-,g")
           done
           
