--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,9 @@ permissions:
   contents: read
   id-token: write
 on:
+  push:
+    branches:
+      - main
   pull_request:
 jobs:
   score-validate:
