sed context.res.id

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
             inputs=$(echo ${resourceDefinition} |  sed "s,/,-,g")
             humctl resources test-definition ${resourceDefinition} --generate > ${inputs}
             sed -i 's/""/"test"/g' ${inputs}
+            sed -i 's/context.res.id: ""/context.res.id: "modules.test.externals.test"/g' ${inputs}
             humctl resources test-definition ${resourceDefinition} --inputs ${inputs}
           done
   test-definition-template:
@@ -71,6 +72,7 @@ jobs:
             inputs=$(echo ${resourceDefinition} |  sed "s,/,-,g")
             humctl resources test-definition ${resourceDefinition} --generate > ${inputs}
             sed -i 's/""/"test"/g' ${inputs}
+            sed -i 's/context.res.id: ""/context.res.id: "modules.test.externals.test"/g' ${inputs}
             humctl resources test-definition ${resourceDefinition} --inputs ${inputs}
           done
           
