--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,10 +68,12 @@ jobs:
           for resourceDefinition in ${resourceDefinitions}
           do
             echo ${resourceDefinition}
-            inputs=$(echo ${resourceDefinition} |  sed "s,/,-,g")
-            humctl resources test-definition ${resourceDefinition} --generate > ${inputs}
-            sed -i 's/context.res.id: ""/context.res.id: "modules.test.externals.test"/g' ${inputs}
-            sed -i 's/""/"test"/g' ${inputs}
-            humctl resources test-definition ${resourceDefinition} --inputs ${inputs}
+            if [ "${resourceDefinition}" != "resource-definitions/template-driver/ingress/ingress-traefik-multiple-routes.yaml" ]; then
+              inputs=$(echo ${resourceDefinition} |  sed "s,/,-,g")
+              humctl resources test-definition ${resourceDefinition} --generate > ${inputs}
+              sed -i 's/context.res.id: ""/context.res.id: "modules.test.externals.test"/g' ${inputs}
+              sed -i 's/""/"test"/g' ${inputs}
+              humctl resources test-definition ${resourceDefinition} --inputs ${inputs}
+            fi
           done
           
